Added FarmDataRequest and FarmDataResponse classes