@@ -14,8 +14,6 @@ import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 
 
 @Service
@@ -46,7 +44,7 @@ public class FarmDataServiceImpl implements FarmDataService {
                     farm.setFarmer(farmer); // Link farm to the farmer
                     return farmRepository.save(farm); // Save farm and get the entity back
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // Convert and save Crops
         List<Crop> crops = farmDataDTO.getCrops().stream()
@@ -55,16 +53,16 @@ public class FarmDataServiceImpl implements FarmDataService {
                     crop.setFarm(farms.get(0)); // Assuming all crops belong to the same farm
                     return cropRepository.save(crop); // Save crop and get the entity back
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // Convert saved entities back to DTOs
         FarmerDTO savedFarmerDTO = convertFarmerEntityToDTO(farmer);
         List<FarmDTO> savedFarmDTOs = farms.stream()
                 .map(this::convertFarmEntityToDTO)
-                .collect(Collectors.toList());
+                .toList();
         List<CropDTO> savedCropDTOs = crops.stream()
                 .map(this::convertCropEntityToDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         // Create and return the response DTO
         FarmDataDTO responseDTO = new FarmDataDTO();
@@ -78,13 +76,14 @@ public class FarmDataServiceImpl implements FarmDataService {
 
     public Farmer convertFarmerDTOToEntity(FarmerDTO farmerDTO) {
         Farmer farmer = new Farmer();
+        farmer.setFarmerId(farmerDTO.getFarmerId());
         farmer.setFarmerName(farmerDTO.getFarmerName());
         return farmer;
     }
 
     private Farm convertFarmDTOToEntity(FarmDTO farmDTO) {
         Farm farm = new Farm();
-
+        farm.setFarmId(farmDTO.getFarmId());
         farm.setFarmName(farmDTO.getFarmName());
         farm.setFarmArea(farmDTO.getFarmArea());
         farm.setSeason(farmDTO.getSeason());
@@ -94,7 +93,7 @@ public class FarmDataServiceImpl implements FarmDataService {
 
     private Crop convertCropDTOToEntity(CropDTO cropDTO) {
         Crop crop = new Crop();
-
+        crop.setCropId(cropDTO.getCropId());
         crop.setCropName(cropDTO.getCropName());
         crop.setActualAmount(cropDTO.getActualAmount());
         crop.setExpectedAmount(cropDTO.getExpectedAmount());
@@ -103,13 +102,14 @@ public class FarmDataServiceImpl implements FarmDataService {
 
     public FarmerDTO convertFarmerEntityToDTO(Farmer farmer) {
         FarmerDTO farmerDTO = new FarmerDTO();
+        farmerDTO.setFarmerId(farmer.getFarmerId());
         farmerDTO.setFarmerName(farmer.getFarmerName());
         return farmerDTO;
     }
 
     private FarmDTO convertFarmEntityToDTO(Farm farm) {
         FarmDTO farmDTO = new FarmDTO();
-
+        farmDTO.setFarmId(farm.getFarmId());
         farmDTO.setFarmName(farm.getFarmName());
         farmDTO.setFarmArea(farm.getFarmArea());
         farmDTO.setSeason(farm.getSeason());
@@ -119,7 +119,7 @@ public class FarmDataServiceImpl implements FarmDataService {
 
     private CropDTO convertCropEntityToDTO(Crop crop) {
         CropDTO cropDTO = new CropDTO();
-
+        cropDTO.setCropId(crop.getCropId());
         cropDTO.setCropName(crop.getCropName());
         cropDTO.setActualAmount(crop.getActualAmount());
         cropDTO.setExpectedAmount(crop.getExpectedAmount());
